--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.servlet.multipart.max-request-size=10MB
 
 #JDBC CONNECTION
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost:3306/bookmanager?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
 
 #jpa
