--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.servlet.multipart.max-request-size=10MB
 
 #JDBC CONNECTION
 spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/bookmanager?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://192.168.1.144:3307/bookmanager?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
 
 #jpa
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -41,4 +41,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #UPLOAD FOLDER
-upload.folder="F:/Book Manager File"
+upload.folder= /home/truong/Documents/
+
+springdoc.api-docs.path=/api-docs
