--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 #JDBC CONNECTION
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://192.168.1.144:3307/bookmanager?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=admin
+spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://192.168.1.144:3306/bookmanager?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
 
 #jpa
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -44,3 +44,15 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 upload.folder= /home/truong/Documents/
 
 springdoc.api-docs.path=/api-docs
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#0: No wait for kafka response
+#1: Leader write success, not wait for follower
+#-1: wait for all leader, and replication
+spring.kafka.producer.acks=-1
+spring.kafka.producer.retries=1
+
+#prevent duplicate send
+spring.kafka.producer.properties.[enable.idempotence]=true
+spring.kafka.producer.properties.[max.in.flight.requests.per.connection]=5
