--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 #JDBC CONNECTION
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/bookmanager?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=admin
+spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://192.168.1.144:3306/bookmanager?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
 
 #jpa
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -20,7 +20,8 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 #logging: slf4j, logback #debug
-logging.level.root=info 
+logging.level.root=info
+logging.level.org.apache.kafka = off
 logging.file.name=myapp.log
 logging.logback.rollingpolicy.max-file-size=2MB
 logging.logback.rollingpolicy.max-history=7
@@ -41,6 +42,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #UPLOAD FOLDER
-upload.folder= F:/
+upload.folder= /home/truong/bookFile/
 
 springdoc.api-docs.path=/api-docs
