--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #UPLOAD FOLDER
-upload.folder= /home/truong/bookFile/
+upload.folder= F:/Book Manager File/
 
 springdoc.api-docs.path=/api-docs
